--- a/docs/CSS/Pages/_section.scss
+++ b/docs/CSS/Pages/_section.scss
@@ -46,5 +46,6 @@ section{
         border-bottom: 4px solid $color-tertiary;
         max-width: 42px;
         display: block ruby;
+        white-space: nowrap;
     }
 }
